--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -37,9 +37,19 @@
 },
 
 
-@misc{usenet,
-  howpublished = {\url{http://kdd.ics.uci.edu/databases/20newsgroups/}}
-},
+@inproceedings{usenet,
+  title={An Ensemble of Classifiers for coping with Recurring Contexts in Data Streams.},
+  author={Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis P},
+  booktitle={ECAI},
+  pages={763--764},
+  year={2008}
+}
+
+@misc{usenetSource,
+  title={UCI machine learning repository},
+  author={Asuncion, Arthur and Newman, David},
+  year={2007}
+}
 
 @article{keren2014geometric,
   title={Geometric monitoring of heterogeneous streams},
@@ -128,4 +138,68 @@
   pages={289--300},
   year={2006},
   organization={ACM}
+}
+
+@inproceedings{wang2015concept,
+  title={Concept drift detection for streaming data},
+  author={Wang, Heng and Abraham, Zubin},
+  booktitle={Neural Networks (IJCNN), 2015 International Joint Conference on},
+  pages={1--9},
+  year={2015},
+  organization={IEEE}
+}
+
+@incollection{gama2004learning,
+  title={Learning with drift detection},
+  author={Gama, Joao and Medas, Pedro and Castillo, Gladys and Rodrigues, Pedro},
+  booktitle={Advances in artificial intelligence--SBIA 2004},
+  pages={286--295},
+  year={2004},
+  publisher={Springer}
+}
+
+@inproceedings{wang2013concept,
+  title={Concept drift detection for online class imbalance learning},
+  author={Wang, Shuo and Minku, Leandro L and Ghezzi, Diego and Caltabiano, Daniele and Tino, Peter and Yao, Xin},
+  booktitle={Neural Networks (IJCNN), The 2013 International Joint Conference on},
+  pages={1--10},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{baena2006early,
+  title={Early drift detection method},
+  author={Baena-Garc{\i}a, Manuel and del Campo-{\'A}vila, Jos{\'e} and Fidalgo, Ra{\'u}l and Bifet, Albert and Gavalda, R and Morales-Bueno, R},
+  booktitle={Fourth international workshop on knowledge discovery from data streams},
+  volume={6},
+  pages={77--86},
+  year={2006}
+}
+
+@inproceedings{klinkenberg2000detecting,
+  title={Detecting Concept Drift with Support Vector Machines.},
+  author={Klinkenberg, Ralf and Joachims, Thorsten},
+  booktitle={ICML},
+  pages={487--494},
+  year={2000}
+}
+
+@article{dries2009adaptive,
+  title={Adaptive concept drift detection},
+  author={Dries, Anton and R{\"u}ckert, Ulrich},
+  journal={Statistical Analysis and Data Mining: The ASA Data Science Journal},
+  volume={2},
+  number={5-6},
+  pages={311--327},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{wang2015concept,
+  title={Concept drift detection for streaming data},
+  author={Wang, Heng and Abraham, Zubin},
+  booktitle={Neural Networks (IJCNN), 2015 International Joint Conference on},
+  pages={1--9},
+  year={2015},
+  organization={IEEE}
 }
