--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -45,10 +45,12 @@
   year={2008}
 }
 
-@misc{usenetSource,
-  title={UCI machine learning repository},
-  author={Asuncion, Arthur and Newman, David},
-  year={2007}
+@inproceedings{usenetSource,
+  title={An Ensemble of Classifiers for coping with Recurring Contexts in Data Streams.},
+  author={Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis P},
+  booktitle={ECAI},
+  pages={763--764},
+  year={2008}
 }
 
 @article{keren2014geometric,
